test/expected/declare_etstf_v.out
declare f as extern static function returning void
        ^
9: error: "extern static" is illegal for function
